suicide vs nothing model done

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -6182,7 +6182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -6201,7 +6201,11 @@
       "Downloading Batch 30 of 50...\n",
       "Downloading Batch 35 of 50...\n",
       "Downloading Batch 40 of 50...\n",
-      "Downloading Batch 45 of 50...\n"
+      "Downloading Batch 45 of 50...\n",
+      "Downloading Batch 50 of 50...\n",
+      "<<<SCRAPING COMPLETED>>>\n",
+      "Number of posts downloaded: 1237\n",
+      "Number of unique posts: 835\n"
      ]
     }
    ],
@@ -6213,7 +6217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6230,9 +6234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIST NOW CONTAINS 835 UNIQUE SCRAPED POSTS\n"
+     ]
+    }
+   ],
    "source": [
     "# call function on our data\n",
     "casual_scraped_unique = []\n",
@@ -6241,23 +6253,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>approved_at_utc</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author_fullname</th>\n",
+       "      <th>saved</th>\n",
+       "      <th>mod_reason_title</th>\n",
+       "      <th>gilded</th>\n",
+       "      <th>clicked</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link_flair_richtext</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stickied</th>\n",
+       "      <th>url</th>\n",
+       "      <th>subreddit_subscribers</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>media</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>poll_data</th>\n",
+       "      <th>author_cakeday</th>\n",
+       "      <th>is_suicide</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>CasualConversation</td>\n",
+       "      <td>Let's chat!</td>\n",
+       "      <td>t2_5r8xp</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>r/CasualConversation Lounge</td>\n",
+       "      <td>[{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>1346328</td>\n",
+       "      <td>1.597424e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>CasualConversation</td>\n",
+       "      <td>Monthly Meta is back - [follow the collection]...</td>\n",
+       "      <td>t2_5r8xp</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>September Monthly Meta - r/CasualConversation ...</td>\n",
+       "      <td>[{'a': ':shield:', 'e': 'emoji', 'u': 'https:/...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>1346328</td>\n",
+       "      <td>1.598980e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>CasualConversation</td>\n",
+       "      <td>Look, I love my family and they're awesome. Bu...</td>\n",
+       "      <td>t2_7s6xkdc5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I got a hotel room here in my town because I n...</td>\n",
+       "      <td>[{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>1346328</td>\n",
+       "      <td>1.599439e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>CasualConversation</td>\n",
+       "      <td>Lately I’ve noticed many guys around my circle...</td>\n",
+       "      <td>t2_5kmlnpy4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Your height is totally fine</td>\n",
+       "      <td>[{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>1346328</td>\n",
+       "      <td>1.599397e+09</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>CasualConversation</td>\n",
+       "      <td>I was at a Halloween party with my best friend...</td>\n",
+       "      <td>t2_5yz95sxz</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I remember this conversation with an old acqua...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>1346328</td>\n",
+       "      <td>1.599398e+09</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 107 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  approved_at_utc           subreddit  \\\n",
+       "0            None  CasualConversation   \n",
+       "1            None  CasualConversation   \n",
+       "2            None  CasualConversation   \n",
+       "3            None  CasualConversation   \n",
+       "4            None  CasualConversation   \n",
+       "\n",
+       "                                            selftext author_fullname  saved  \\\n",
+       "0                                        Let's chat!        t2_5r8xp  False   \n",
+       "1  Monthly Meta is back - [follow the collection]...        t2_5r8xp  False   \n",
+       "2  Look, I love my family and they're awesome. Bu...     t2_7s6xkdc5  False   \n",
+       "3  Lately I’ve noticed many guys around my circle...     t2_5kmlnpy4  False   \n",
+       "4  I was at a Halloween party with my best friend...     t2_5yz95sxz  False   \n",
+       "\n",
+       "  mod_reason_title  gilded  clicked  \\\n",
+       "0             None       0    False   \n",
+       "1             None       0    False   \n",
+       "2             None       0    False   \n",
+       "3             None       1    False   \n",
+       "4             None       0    False   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0                        r/CasualConversation Lounge   \n",
+       "1  September Monthly Meta - r/CasualConversation ...   \n",
+       "2  I got a hotel room here in my town because I n...   \n",
+       "3                        Your height is totally fine   \n",
+       "4  I remember this conversation with an old acqua...   \n",
+       "\n",
+       "                                 link_flair_richtext  ... stickied  \\\n",
+       "0  [{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...  ...     True   \n",
+       "1  [{'a': ':shield:', 'e': 'emoji', 'u': 'https:/...  ...     True   \n",
+       "2  [{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...  ...    False   \n",
+       "3  [{'a': ':chat:', 'e': 'emoji', 'u': 'https://e...  ...    False   \n",
+       "4                                                 []  ...    False   \n",
+       "\n",
+       "                                                 url  subreddit_subscribers  \\\n",
+       "0  https://www.reddit.com/r/CasualConversation/co...                1346328   \n",
+       "1  https://www.reddit.com/r/CasualConversation/co...                1346328   \n",
+       "2  https://www.reddit.com/r/CasualConversation/co...                1346328   \n",
+       "3  https://www.reddit.com/r/CasualConversation/co...                1346328   \n",
+       "4  https://www.reddit.com/r/CasualConversation/co...                1346328   \n",
+       "\n",
+       "    created_utc num_crossposts  media is_video  poll_data author_cakeday  \\\n",
+       "0  1.597424e+09              0   None    False        NaN            NaN   \n",
+       "1  1.598980e+09              0   None    False        NaN            NaN   \n",
+       "2  1.599439e+09              0   None    False        NaN            NaN   \n",
+       "3  1.599397e+09              2   None    False        NaN            NaN   \n",
+       "4  1.599398e+09              3   None    False        NaN            NaN   \n",
+       "\n",
+       "   is_suicide  \n",
+       "0           0  \n",
+       "1           0  \n",
+       "2           0  \n",
+       "3           0  \n",
+       "4           0  \n",
+       "\n",
+       "[5 rows x 107 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# input depression data to dataframe and csv\n",
     "casualConvo = pd.DataFrame(casual_scraped_unique)\n",
-    "casualConvo[\"is_suicide\"] = 1\n",
+    "casualConvo[\"is_suicide\"] = 0\n",
     "casualConvo.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "casualConvo.to_csv('../data/casual_conversation_vs_depression.csv', index = False)"
+    "casualConvo.to_csv('../data/casual_conversation_vs_suicide.csv', index = False)"
    ]
   },
   {
