--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -10,17 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import array\n",
@@ -67,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../data/depression_vs_nothing.csv', keep_default_na=False)"
+    "model_data = pd.read_csv('../data/suicide_vs_nothing.csv', keep_default_na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -106,35 +98,47 @@
        "      <th>num_comments</th>\n",
        "      <th>is_suicide</th>\n",
        "      <th>url</th>\n",
+       "      <th>selftext_clean</th>\n",
+       "      <th>title_clean</th>\n",
+       "      <th>author_clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1750</th>\n",
+       "      <th>1812</th>\n",
+       "      <td>My teenager made me so proud tonight with a si...</td>\n",
+       "      <td>I have 4 boys ranging from ages 3 to 14. Tonig...</td>\n",
+       "      <td>SedativeCorpse</td>\n",
+       "      <td>251</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>4 boy ranging age 3 14 tonight 3 year old wa t...</td>\n",
+       "      <td>teenager made proud tonight simple gesture</td>\n",
+       "      <td>sedative corpse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
        "      <td>After 30 years of being open, my family’s rest...</td>\n",
        "      <td>My family has owned a fine dining italian rest...</td>\n",
        "      <td>retirereddit</td>\n",
        "      <td>769</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>family ha owned fine dining italian restaurant...</td>\n",
+       "      <td>30 year open family restaurant closing tonight</td>\n",
+       "      <td>retire reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1751</th>\n",
-       "      <td>This coronavirus things has made me realize pe...</td>\n",
-       "      <td>Just live streams of people at home getting in...</td>\n",
-       "      <td>ghost_sanctum</td>\n",
-       "      <td>2996</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1814</th>\n",
+       "      <td>I’ve been living in Japan for more than a deca...</td>\n",
+       "      <td>First of all, I’m not Japanese. I came to Japa...</td>\n",
+       "      <td>BeardedGlass</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
        "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1752</th>\n",
-       "      <td>I’m a lunch lady at an elementary school schoo...</td>\n",
-       "      <td>At first I was mad that I would still have to ...</td>\n",
-       "      <td>befuddledghostie</td>\n",
-       "      <td>1695</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
+       "      <td>first japanese came japan 12 year ago work pro...</td>\n",
+       "      <td>living japan decade anyone ha question life co...</td>\n",
+       "      <td>bearded glass</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,27 +146,37 @@
       ],
       "text/plain": [
        "                                                  title  \\\n",
-       "1750  After 30 years of being open, my family’s rest...   \n",
-       "1751  This coronavirus things has made me realize pe...   \n",
-       "1752  I’m a lunch lady at an elementary school schoo...   \n",
+       "1812  My teenager made me so proud tonight with a si...   \n",
+       "1813  After 30 years of being open, my family’s rest...   \n",
+       "1814  I’ve been living in Japan for more than a deca...   \n",
        "\n",
-       "                                               selftext            author  \\\n",
-       "1750  My family has owned a fine dining italian rest...      retirereddit   \n",
-       "1751  Just live streams of people at home getting in...     ghost_sanctum   \n",
-       "1752  At first I was mad that I would still have to ...  befuddledghostie   \n",
+       "                                               selftext          author  \\\n",
+       "1812  I have 4 boys ranging from ages 3 to 14. Tonig...  SedativeCorpse   \n",
+       "1813  My family has owned a fine dining italian rest...    retirereddit   \n",
+       "1814  First of all, I’m not Japanese. I came to Japa...    BeardedGlass   \n",
        "\n",
        "      num_comments  is_suicide  \\\n",
-       "1750           769           1   \n",
-       "1751          2996           1   \n",
-       "1752          1695           1   \n",
+       "1812           251           0   \n",
+       "1813           769           0   \n",
+       "1814            18           0   \n",
        "\n",
-       "                                                    url  \n",
-       "1750  https://www.reddit.com/r/CasualConversation/co...  \n",
-       "1751  https://www.reddit.com/r/CasualConversation/co...  \n",
-       "1752  https://www.reddit.com/r/CasualConversation/co...  "
+       "                                                    url  \\\n",
+       "1812  https://www.reddit.com/r/CasualConversation/co...   \n",
+       "1813  https://www.reddit.com/r/CasualConversation/co...   \n",
+       "1814  https://www.reddit.com/r/CasualConversation/co...   \n",
+       "\n",
+       "                                         selftext_clean  \\\n",
+       "1812  4 boy ranging age 3 14 tonight 3 year old wa t...   \n",
+       "1813  family ha owned fine dining italian restaurant...   \n",
+       "1814  first japanese came japan 12 year ago work pro...   \n",
+       "\n",
+       "                                            title_clean     author_clean  \n",
+       "1812         teenager made proud tonight simple gesture  sedative corpse  \n",
+       "1813     30 year open family restaurant closing tonight    retire reddit  \n",
+       "1814  living japan decade anyone ha question life co...    bearded glass  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +195,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1753 entries, 0 to 1752\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   title         1753 non-null   object\n",
-      " 1   selftext      1753 non-null   object\n",
-      " 2   author        1753 non-null   object\n",
-      " 3   num_comments  1753 non-null   int64 \n",
-      " 4   is_suicide    1753 non-null   int64 \n",
-      " 5   url           1753 non-null   object\n",
-      "dtypes: int64(2), object(4)\n",
-      "memory usage: 82.3+ KB\n"
+      "RangeIndex: 1815 entries, 0 to 1814\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   title           1815 non-null   object\n",
+      " 1   selftext        1815 non-null   object\n",
+      " 2   author          1815 non-null   object\n",
+      " 3   num_comments    1815 non-null   int64 \n",
+      " 4   is_suicide      1815 non-null   int64 \n",
+      " 5   url             1815 non-null   object\n",
+      " 6   selftext_clean  1815 non-null   object\n",
+      " 7   title_clean     1815 non-null   object\n",
+      " 8   author_clean    1815 non-null   object\n",
+      "dtypes: int64(2), object(7)\n",
+      "memory usage: 127.7+ KB\n"
      ]
     }
    ],
@@ -209,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4768967484312607"
+       "0.5399449035812672"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,35 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'selftext_clean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2645\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2646\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2647\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'selftext_clean'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e414a941dd59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# getting ready for training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"selftext_clean\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_suicide'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# train/test split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2798\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2799\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2800\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2801\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2802\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2646\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2647\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2648\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2649\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2650\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'selftext_clean'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getting ready for training\n",
     "\n",
@@ -364,14 +355,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5674676524953789\n"
+      "Accuracy: 0.717948717948718\n",
+      "AUC Score: 0.8066258786774277\n"
      ]
     }
    ],
@@ -386,7 +378,7 @@
     "pred_proba = [i[1] for i in nb.predict_proba(X_test_tvec)] \n",
     "auc = roc_auc_score(y_test, pred_proba)\n",
     "\n",
-    "joblib.dump(nb, \"modelClusteredLabels.h5\")\n",
+    "joblib.dump(nb, \"suicide_vs_nothing.h5\")\n",
     "\n",
     "print(\"Accuracy: {}\\nAUC Score: {}\".format(accuracy, auc) )"
    ]
